# PointNet

./: Pipfile  README.md  pyproject.toml  setup.py
PointNet/classification/: model.py
PointNet/models/: feature_tnet.py  symm_function.py
pointcloud/ICP/: main.py
pointcloud/PointNet/classification/: model.py  train.py
pointcloud/PointNet/models/: feature_tnet.py  input_tnet.py  symm_function.py
pointcloud/estimate_normal/: estimate_normal.py
pointcloud/registration/: icp.py  registration.py
tests/pointcloud/registration/: test_icp.py
