[tool.poetry]
name = "pointcloud"
version = "0.1.0"
description = ""
authors = ["Sora Ozawa <soraozawa56@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
open3d = "^0.17.0"
scikit-learn = "^1.2.2"
pyyaml = "^6.0"
addict = "^2.4.0"
pillow = "^9.5.0"
pandas = "^1.5.3"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
